--- a/Views/Home/NewIndent.cshtml
+++ b/Views/Home/NewIndent.cshtml
@@ -1,4 +1,5 @@
-﻿ <section id="content-wrapper">
+﻿<link rel="stylesheet" type="text/css" href="~/css/Home/NewIndent.css">
+<section id="content-wrapper">
 
       <div class="filter-wrap">
         <div class="row">
@@ -8,7 +9,7 @@
           <div class="col-md-3">
             <div class="form-group">
               <select class="form-control" id="myDropdown1" name="sellist1">
-                        @* option value from api *@
+            @* option value from api *@
               </select>
             </div>
           </div>
@@ -27,8 +28,11 @@
 
               <select class="form-control" id="myDropdown2" name="sellist1">
                 <option value="alphabetically">Alphabetically</option>
+            @* <span class="material-symbols-rounded">sort_by_alpha</span> *@
                 <option value="pricelowtohigh">Price Low to High</option>
+            @* <span class="material-symbols-rounded">south</span> *@
                 <option value="pricehightolow">Price High to Low</option>
+            @* <span class="material-symbols-rounded">sort</span> *@
               </select>
 
             </div>
@@ -44,55 +48,20 @@
       </div>
 
       <div class="container-fluid">
-        @* card *@
+    @* card *@
         <div class="product-card-wrap">
           <div class="row" id="cardbody" >
-                @* js call *@
+        @* js call *@
           </div>
         </div>
-        @* card end *@
+    @* card end *@
       </div>
 
     <div>
         <!--Pagination 4-->
         <nav class="pagination-wrap"
             aria-label="pagination example" style="display: flex;flex-direction: row;justify-content: center;">
-            <ul
-                class="pagination pagination-circle justify-content-center" id="paginationlist" >
-
-                @* <li class="page-item disabled">
-                    <a class="page-link prev"
-                        aria-label="Previous">
-                        <span
-                            aria-hidden="true">&#10094;</span>
-                        <span
-                            class="sr-only">Previous</span>
-                    </a>
-                </li> *@
-
-                
-                @* <li class="page-item active"><a
-                        class="page-link">1</a></li>
-                <li class="page-item"><a
-                        class="page-link">2</a></li>
-                <li class="page-item"><a
-                        class="page-link">3</a></li>
-                <li class="page-item"><a
-                        class="page-link">4</a></li>
-                <li class="page-item"><a
-                        class="page-link">5</a></li> *@
-
-                
-                @* <li class="page-item">
-                    <a class="page-link next"
-                        aria-label="Next">
-                        <span
-                            aria-hidden="true">&#10095;</span>
-                        <span
-                            class="sr-only">Next</span>
-                    </a>
-                </li> *@
-            </ul>
+            <ul class="pagination pagination-circle justify-content-center" id="paginationlist" > </ul>
         </nav>
     </div>
     <br>
@@ -100,3 +69,6 @@
     </section>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<script src="~/js/main.js"></script>
+<script src="~/js/Home/NewIndent.js"></script> 
