--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,19 +11,29 @@
     <link rel="stylesheet" href="~/css/Login.css" asp-append-version="true" />
 
     <!--Bootstrap cdn-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    @* <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> *@
+    
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400|Montserrat:700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+
 
     <!--Google icon cdn -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 @* <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,400,1,0" /> *@
     <!--Local css-->
-    <link rel="stylesheet" type="text/css" href="~/css/sidebarandheader.css">
     <link rel="stylesheet" type="text/css" href="~/css/section.css">
     <link rel="stylesheet" type="text/css" href="~/css/badge_notifiction.css">
     <link rel="stylesheet" type="text/css" href="~/css/Cart.css">
+    <link rel="stylesheet" type="text/css" href="~/css/common.css">
+    <link rel="stylesheet" type="text/css" href="~/css/NewIndent.css">
+    @* <link rel="stylesheet" type="text/css" href="~/css/sidebarandheader.css"> *@
 </head>
 <body>
 
@@ -56,10 +66,12 @@
                         <div class="badge red" id="notifications_no"></div>
                         <span class="material-symbols-rounded">notifications</span>
                     </div>
-                    <div class="position">
-                        <div class="badge green">10</div>
-                        <a href="Cart"><span class="material-symbols-rounded">shopping_cart</span></a>
-                    </div>
+                    <a href="Cart">
+                        <div class="position">
+                            <div class="badge green" id="notifications_cart"></div>
+                            <a href="Cart"><span class="material-symbols-rounded">shopping_cart</span></a>
+                        </div>
+                    </a>
                     <div class="position">
                         <span class="material-symbols-rounded">account_circle</span><span id="username"></span>
                     </div>
@@ -71,11 +83,35 @@
         </div>
         <!-- header end -->
         @RenderBody()
+        <!-- Vertically centered modal -->
+        <div class="modal-dialog modal-dialog-centered">
+        <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+                </div>
+            </div>
+            </div>
+        </div>
+
+
     </div>
     @* sidebar menu end *@
 
 
     <script src="~/js/main.js"></script>
+    <script src="~/js/Home/Home.js"></script>
 
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
@@ -83,12 +119,12 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/Logout.js"></script>
 
-    <script src="~/js/Home/Home.js"></script>
     <!-- Jquery CDN Link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script type="text/javascript">
-
+        var host = "https://172.16.1.69:3002";
+        var path = "/api/v4/";
         // Check if the screen size matches a mobile device
         var isMobile = window.matchMedia("(max-width: 767px)").matches;
 
@@ -128,24 +164,25 @@
 
     <script>
         document.getElementById("username").innerHTML = Logindata.user[0].first_name + " " + Logindata.user[0].sap_user_id;
-        console.log("Logindata on master page----->", Logindata);
+        @* console.log("Logindata on master page----->", Logindata); *@
         if (!Logindata) {
             window.location.href = "Login";
         }
         var menu=[] ;
-        console.log("Logindata.user[0].role_id)->>",Logindata.user[0].role_id);
-
-        //var menuOptions = roles_menus[Logindata.user[0].role_id];
+        var icon;
         var menuOptions = roles_menus[Logindata.user[0].role_id][0];
-
+        
         $.each(menuOptions, function(key, value) {
+            $.each(icons_list, function(ikey, ivalue) {
+                if(ikey==key){icon=ivalue } 
+            });
             var $li = $("<li>");
             var $a = $("<a>").addClass("nav-link").attr({
                 "asp-area": "",
                 "asp-controller": "Home",
                 "asp-action": key,
                 "href": key,
-            }).html(`<span class="material-symbols-rounded">content_paste_go</span><span>${value}</span>`);
+            }).html(`${icon}<span>${value}</span>`);
             $li.append($a);
             $("#sidebar-nav").append($li);
         });
