--- a/wwwroot/css/Cart.css
+++ b/wwwroot/css/Cart.css
@@ -4,7 +4,16 @@
   justify-content: space-between;
   align-items: center;
 }
-
+.page-title h1 {
+  font-size: 26px;
+}
+.page-title button {
+  background-color: #fff;
+  color: #0097e6;
+  padding: 5px 15px;
+  border-radius: 4px;
+  border: 1px solid #0097e6;
+}
 .product-cart-wrapp .table thead tr th:last-child,
 .product-cart-wrapp .table tbody tr td:last-child {
   background-color: #eee8e8;
@@ -13,6 +22,10 @@
 .product-cart-wrapp .table tbody tr td:last-child {
   font-size: 20px;
   padding: 28px 8px 8px;
+}
+.product-cart-wrapp .table tbody tr td:last-child span a {
+  cursor: pointer;
+  color: #575856;
 }
 .product-cart-wrapp .table thead tr th {
   font-size: 12px;
@@ -30,11 +43,10 @@
   display: block;
   margin: 0;
 }
-.wrap {
+.cart-buttons-wrap {
   display: flex;
-  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  gap: 5px;
 }
 
 /* ----------- CART END ---------- */
