--- a/wwwroot/css/badge_notifiction.css
+++ b/wwwroot/css/badge_notifiction.css
@@ -95,13 +95,14 @@
   background: #3366ff;
 }
 .green {
-  background: #26b960;
+  background: #47b773;
 }
 .black {
   background: #000;
 }
 .position:hover .badge {
-  background-color: #232323;
+  /* background-color: #232323; */
+  /* background-color: #535353e4; */
   transform: scale(1.08);
 }
 .position:active .badge {
@@ -118,12 +119,12 @@
   }
   .badge {
     position: absolute;
-    top: -16px;
-    right: -18px;
-    min-width: 35px;
-    height: 35px;
-    padding: 0 7px;
-    font-size: 11px;
+    top: -6px;
+    right: 0px;
+    min-width: 20px;
+    height: 20px;
+    padding: 3px 1px 0 0;
+    font-size: 10px;
     transition: transform 0.1s, background-color 0.2s;
   }
   .position:hover .badge {
